[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust-crypto = "^0.2"
orion = { version = "^0.17.5", features = ["default"] }
base64 = "0.21.2"
#crossterm = "^0.26.0"
rpassword = "^6.0"
inotify = "0.10.2"
tokio = "1.33.0"
#opaque-ke = "2.0"
#rand = "^0.8.5"
