[package]
name = "filecryption"
version = "0.1.0"
edition = "2021"
authors = ["DorianCoding <108593662+DorianCoding@users.noreply.github.com>"]
rust-version = "1.73"
description = "Allows encryption and decryption of files using Argon2 and XChaCha20Poly1305"
repository = "https://github.com/DorianCoding/filecryption"
license-file = "LICENSE.txt"
keywords = ["encryption", "decryption", "XChaCha20Poly1305"]
categories = ["cryptography"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust-crypto = "^0.2"
orion = { version = "^0.17.5", features = ["default"] }
base64 = "0.21.2"
#crossterm = "^0.26.0"
rpassword = "^6.0"
#inotify = "0.10.2"
tokio = "1.33.0"
clap = { version = "4.4.6", features = ["derive"] }
#opaque-ke = "2.0"
#rand = "^0.8.5"
